data/derived/fa15/progs/unify/prog0671.ml.out
Characters 49-59:
  let fixpoint (f,b) = wwhile ( (let f2 x = f x in (f, false)), b);;
                                                   ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
